removed unused imports and refactored code